@@ -49,6 +49,8 @@ DETAILED CHANGES:
 	- FIXED: DrawTextBoxed Could draw text outside rect when using special characters.
 	Also accepts optional tabSize argument.
 	- ADDED: DrawTextBoxed Color change escape sequence.
+	- ADDED: RL.load and RL.unload functions for memory leak debugging.
+	- ADDED: SoundAlias garbage collection.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.8.0		Using Raylib 5.0 and Forked Raygui 4.0
